--- a/WpfApplication3/View/Pages/Page_主内容.xaml
+++ b/WpfApplication3/View/Pages/Page_主内容.xaml
@@ -8,15 +8,15 @@
 	Title="Page_主内容">
 
     <Grid>
-        <Button FocusVisualStyle="{x:Null}" x:Name="Button_刷新结余" Content="刷新结余" HorizontalAlignment="Right" Margin="0,200,10,0" VerticalAlignment="Top" Width="75" Height="25" Foreground="White" Template="{DynamicResource ButtonControlTemplate_通用按钮}" Click="Button_刷新结余_Click"/>
+        <Button FocusVisualStyle="{x:Null}" x:Name="Button_刷新结余" Content="刷新结余" HorizontalAlignment="Right" Margin="0,200,10,0" VerticalAlignment="Top" Width="75" Height="25" Foreground="White" Template="{DynamicResource ButtonControlTemplate_通用按钮}" Click="Button_刷新结余_Click" FontFamily="Microsoft YaHei"/>
 
-        <GroupBox x:Name="GroupBox_通知" Header="通知" HorizontalAlignment="Right" VerticalAlignment="Bottom" Height="55" Width="280" Margin="0,0,100,10">
-            <TextBlock x:Name="TextBlock_通知信息" Margin="10,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="14"><Run Language="zh-cn" Text="成功添加6条记录。"/></TextBlock>
+        <GroupBox x:Name="GroupBox_通知" Header="通知" HorizontalAlignment="Right" VerticalAlignment="Bottom" Height="55" Width="280" Margin="0,0,100,10" FontFamily="Microsoft YaHei">
+            <TextBlock x:Name="TextBlock_通知信息" Margin="10,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="14" FontFamily="Microsoft YaHei"><Run Language="zh-cn" Text="成功添加6条记录。"/></TextBlock>
         </GroupBox>
         <!-- 放DataGrid的Grid -->
         <Grid Margin="10,72,100,74">
             <!-- 主要DataGrid -->
-            <DataGrid FocusVisualStyle="{x:Null}" x:Name="DataGrid_Main" Margin="0" AutoGenerateColumns="False" BeginningEdit="DataGrid_Main_BeginningEdit" CellEditEnding="DataGrid_Main_CellEditEnding" FontSize="14" CanUserAddRows="False" CanUserDeleteRows="False" CanUserReorderColumns="False" CanUserResizeRows="False" OpacityMask="Black">
+            <DataGrid FocusVisualStyle="{x:Null}" x:Name="DataGrid_Main" Margin="0" AutoGenerateColumns="False" BeginningEdit="DataGrid_Main_BeginningEdit" CellEditEnding="DataGrid_Main_CellEditEnding" FontSize="14" CanUserAddRows="False" CanUserDeleteRows="False" CanUserReorderColumns="False" CanUserResizeRows="False" OpacityMask="Black" FontFamily="Microsoft YaHei">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="DBId" Visibility="Collapsed" Binding="{Binding DBId}"/>
                     <DataGridTextColumn Header="序号" IsReadOnly="True" Binding="{Binding 序号}" Visibility="Collapsed"/>
@@ -31,34 +31,34 @@
             </DataGrid>
         </Grid>
         <!--Button-->
-        <Button FocusVisualStyle="{x:Null}" x:Name="Button_添加" Content="添加" HorizontalAlignment="Right" Margin="0,100,10,0" VerticalAlignment="Top" Width="75"  Focusable="False" Height="25" Click="Button_添加_Click" Template="{DynamicResource ButtonControlTemplate_通用按钮}" Foreground="White"/>
-        <Button FocusVisualStyle="{x:Null}" x:Name="Button_删除" Content="删除" HorizontalAlignment="Right" Margin="0,130,10,0" VerticalAlignment="Top" Width="75" Height="25"   Focusable="False" Click="Button_删除_Click" Foreground="White" Template="{DynamicResource ButtonControlTemplate_通用按钮}"  />
+        <Button FocusVisualStyle="{x:Null}" x:Name="Button_添加" Content="添加" HorizontalAlignment="Right" Margin="0,100,10,0" VerticalAlignment="Top" Width="75"  Focusable="False" Height="25" Click="Button_添加_Click" Template="{DynamicResource ButtonControlTemplate_通用按钮}" Foreground="White" FontFamily="Microsoft YaHei"/>
+        <Button FocusVisualStyle="{x:Null}" x:Name="Button_删除" Content="删除" HorizontalAlignment="Right" Margin="0,130,10,0" VerticalAlignment="Top" Width="75" Height="25"   Focusable="False" Click="Button_删除_Click" Foreground="White" Template="{DynamicResource ButtonControlTemplate_通用按钮}" FontFamily="Microsoft YaHei"  />
         <Button FocusVisualStyle="{x:Null}" x:Name="Button_刷新" Content="保存" HorizontalAlignment="Right" Margin="0,198,10,0" VerticalAlignment="Top" Width="75" Height="25"  Focusable="False" Click="Button_刷新_Click" Foreground="White" Template="{DynamicResource ButtonControlTemplate_通用按钮}" Visibility="Collapsed"   />
-        <Button FocusVisualStyle="{x:Null}" x:Name="Button_Excel" Content="导出数据" HorizontalAlignment="Right" Margin="0,0,10,90" VerticalAlignment="Bottom" Width="75"  Height="25" Focusable="False" Click="Button_Excel_Click" Foreground="White" Template="{DynamicResource ButtonControlTemplate_通用按钮}"   />
+        <Button FocusVisualStyle="{x:Null}" x:Name="Button_Excel" Content="导出数据" HorizontalAlignment="Right" Margin="0,0,10,90" VerticalAlignment="Bottom" Width="75"  Height="25" Focusable="False" Click="Button_Excel_Click" Foreground="White" Template="{DynamicResource ButtonControlTemplate_通用按钮}" FontFamily="Microsoft YaHei"   />
         <Button FocusVisualStyle="{x:Null}" x:Name="Button_导入Excel" Content="导入数据" HorizontalAlignment="Right" Margin="0,0,10,191" VerticalAlignment="Bottom" Width="75" Height="25"  Focusable="False" Click="Button_导入Excel_Click" Foreground="White" Template="{DynamicResource ButtonControlTemplate_通用按钮}" Visibility="Collapsed"   />
 
-        <ComboBox FocusVisualStyle="{x:Null}" x:Name="ComboBox_Year" HorizontalAlignment="Left" Margin="50,43,0,0" VerticalAlignment="Top" Width="80"  ToolTip="年份" SelectionChanged="ComboBox_Year_SelectionChanged"   />
-        <ComboBox FocusVisualStyle="{x:Null}" x:Name="ComboBox_Month" HorizontalAlignment="Left" Margin="135,43,0,0" VerticalAlignment="Top" Width="60" IsReadOnly="True"  ToolTip="月份" SelectionChanged="ComboBox_Month_SelectionChanged"   />
+        <ComboBox FocusVisualStyle="{x:Null}" x:Name="ComboBox_Year" HorizontalAlignment="Left" Margin="50,43,0,0" VerticalAlignment="Top" Width="80"  ToolTip="年份" SelectionChanged="ComboBox_Year_SelectionChanged" FontFamily="Microsoft YaHei"   />
+        <ComboBox FocusVisualStyle="{x:Null}" x:Name="ComboBox_Month" HorizontalAlignment="Left" Margin="135,43,0,0" VerticalAlignment="Top" Width="60" IsReadOnly="True"  ToolTip="月份" SelectionChanged="ComboBox_Month_SelectionChanged" FontFamily="Microsoft YaHei"   />
 
         <!--TextBox-->
-        <TextBox FocusVisualStyle="{x:Null}" x:Name="TextBox_承上月结余" HorizontalAlignment="Right" Margin="0,43,100,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120"  IsReadOnly="True" Height="20" OpacityMask="Black" />
+        <TextBox FocusVisualStyle="{x:Null}" x:Name="TextBox_承上月结余" HorizontalAlignment="Right" Margin="0,43,100,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120"  IsReadOnly="True" Height="20" OpacityMask="Black" FontFamily="Microsoft YaHei" />
 
         <!--TextBlock-->
-        <TextBlock HorizontalAlignment="Center" Margin="0,10,50,0" TextWrapping="Wrap" Text="银行日记账" VerticalAlignment="Top" FontSize="26" FontWeight="Bold" OpacityMask="Black" />
-        <TextBlock HorizontalAlignment="Left" Margin="10,45,0,0" TextWrapping="Wrap" Text="日期:" VerticalAlignment="Top" Height="20"   />
-        <TextBlock FocusVisualStyle="{x:Null}" HorizontalAlignment="Right" Margin="0,45,231,0" TextWrapping="Wrap" Text="承上月结余:" VerticalAlignment="Top"  RenderTransformOrigin="1.37,0.44" Height="20" OpacityMask="Black"  />
+        <TextBlock HorizontalAlignment="Center" Margin="0,10,50,0" TextWrapping="Wrap" Text="银行日记账" VerticalAlignment="Top" FontSize="26" FontWeight="Bold" OpacityMask="Black" FontFamily="Microsoft YaHei" />
+        <TextBlock HorizontalAlignment="Left" Margin="10,45,0,0" TextWrapping="Wrap" Text="日期:" VerticalAlignment="Top" Height="20" FontFamily="Microsoft YaHei"   />
+        <TextBlock FocusVisualStyle="{x:Null}" HorizontalAlignment="Right" Margin="0,45,231,0" TextWrapping="Wrap" Text="承上月结余:" VerticalAlignment="Top"  RenderTransformOrigin="1.37,0.44" Height="20" OpacityMask="Black" FontFamily="Microsoft YaHei"  />
         <Grid HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10,0,0,10">
             <Grid Height="1" Margin="0,0,10,30" VerticalAlignment="Bottom" Background="#FF747474" IsEnabled="False"/>
-            <TextBlock HorizontalAlignment="Left" Margin="0,0,0,5" TextWrapping="Wrap" Text="借方发生额累计(年)：" VerticalAlignment="Bottom"   />
-            <TextBlock HorizontalAlignment="Left" Margin="306,0,0,5" TextWrapping="Wrap" Text="贷方发生额累计(年)：" VerticalAlignment="Bottom"   />
-            <TextBlock x:Name="TextBlock_借方发生额累计" HorizontalAlignment="Left" Margin="121,0,0,3" TextWrapping="Wrap"  VerticalAlignment="Bottom"  Width="180" FontSize="14"/>
-            <TextBlock x:Name="TextBlock_贷方发生额累计" HorizontalAlignment="Left" Margin="427,0,0,3" TextWrapping="Wrap"  VerticalAlignment="Bottom" Width="176" FontSize="14"/>
-            <TextBlock HorizontalAlignment="Left" Margin="0,0,0,40" TextWrapping="Wrap" Text="借方发生额合计(月)：" VerticalAlignment="Bottom"   />
-            <TextBlock HorizontalAlignment="Left" Margin="306,0,0,39" TextWrapping="Wrap" Text="贷方发生额合计(月)：" VerticalAlignment="Bottom"   />
-            <TextBlock x:Name="TextBlock_借方发生额合计" HorizontalAlignment="Left" Margin="121,0,0,38" TextWrapping="Wrap"  VerticalAlignment="Bottom" Width="180" FontSize="14"/>
-            <TextBlock x:Name="TextBlock_贷方发生额合计" HorizontalAlignment="Left" Margin="427,0,0,38" TextWrapping="Wrap"  VerticalAlignment="Bottom" Width="176" FontSize="14"/>
+            <TextBlock HorizontalAlignment="Left" Margin="0,0,0,5" TextWrapping="Wrap" Text="借方发生额累计(年)：" VerticalAlignment="Bottom" FontFamily="Microsoft YaHei"   />
+            <TextBlock HorizontalAlignment="Left" Margin="306,0,0,5" TextWrapping="Wrap" Text="贷方发生额累计(年)：" VerticalAlignment="Bottom" FontFamily="Microsoft YaHei"   />
+            <TextBlock x:Name="TextBlock_借方发生额累计" HorizontalAlignment="Left" Margin="121,0,0,3" TextWrapping="Wrap"  VerticalAlignment="Bottom"  Width="180" FontSize="14" FontFamily="Microsoft YaHei"/>
+            <TextBlock x:Name="TextBlock_贷方发生额累计" HorizontalAlignment="Left" Margin="427,0,0,3" TextWrapping="Wrap"  VerticalAlignment="Bottom" Width="176" FontSize="14" FontFamily="Microsoft YaHei"/>
+            <TextBlock HorizontalAlignment="Left" Margin="0,0,0,40" TextWrapping="Wrap" Text="借方发生额合计(月)：" VerticalAlignment="Bottom" FontFamily="Microsoft YaHei"   />
+            <TextBlock HorizontalAlignment="Left" Margin="306,0,0,39" TextWrapping="Wrap" Text="贷方发生额合计(月)：" VerticalAlignment="Bottom" FontFamily="Microsoft YaHei"   />
+            <TextBlock x:Name="TextBlock_借方发生额合计" HorizontalAlignment="Left" Margin="121,0,0,38" TextWrapping="Wrap"  VerticalAlignment="Bottom" Width="180" FontSize="14" FontFamily="Microsoft YaHei"/>
+            <TextBlock x:Name="TextBlock_贷方发生额合计" HorizontalAlignment="Left" Margin="427,0,0,38" TextWrapping="Wrap"  VerticalAlignment="Bottom" Width="176" FontSize="14" FontFamily="Microsoft YaHei"/>
         </Grid>
-        <Grid x:Name="Grid_弹出_添加数据" Margin="0" Background="#7F000000" Visibility="Collapsed">
+        <Grid FocusVisualStyle="{x:Null}" x:Name="Grid_弹出_添加数据" Margin="0" Background="#7F000000" Visibility="Collapsed">
             <Frame x:Name="Frame_弹出_添加数据" Content="" HorizontalAlignment="Right" Margin="0" Width="800" Background="White" NavigationUIVisibility="Hidden"/>
         </Grid>
 
