--- a/WpfApplication3/View/Windows/SettingsWindow.xaml
+++ b/WpfApplication3/View/Windows/SettingsWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Name="Win_Settings" x:Class="Wpf.View.Windows.SettingsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="设置" Height="300" Width="400" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow" FontSize="14" MinWidth="400" MinHeight="300" ResizeMode="NoResize">
+        Title="设置" Height="300" Width="400" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow" FontSize="14" MinWidth="400" MinHeight="300" ResizeMode="NoResize" FontFamily="Microsoft YaHei">
     <Grid x:Name="Grid_Settings">
         <TabControl Margin="0">
             <TabItem FocusVisualStyle="{x:Null}" Header="软件设置">
@@ -10,7 +10,7 @@
                         <ColumnDefinition/>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
-                    <Button x:Name="Button_保存设置" Content="保存" HorizontalAlignment="Center" Margin="0,0,0,10" VerticalAlignment="Bottom" Width="75" Click="Button_保存设置_Click" Height="25" Grid.ColumnSpan="2" Template="{DynamicResource ButtonControlTemplate_通用按钮}" Foreground="White"/>
+                    <Button FocusVisualStyle="{x:Null}" x:Name="Button_保存设置" Content="保存" HorizontalAlignment="Center" Margin="0,0,0,10" VerticalAlignment="Bottom" Width="75" Click="Button_保存设置_Click" Height="25" Grid.ColumnSpan="2" Template="{DynamicResource ButtonControlTemplate_通用按钮}" Foreground="White"/>
                     <TextBlock HorizontalAlignment="Left" Margin="10,37,0,0" TextWrapping="Wrap" Text="初始金额：" VerticalAlignment="Top"/>
                     <TextBox x:Name="Textbox_初始金额_1" HorizontalAlignment="Left" Height="20" Margin="17,35,0,0" TextWrapping="Wrap" Text="0.0" VerticalAlignment="Top" Width="120" Grid.Column="1"/>
                     <TextBlock x:Name="TextBlock_初始金额_1" HorizontalAlignment="Left" Margin="85,37,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="20" Grid.ColumnSpan="2" Width="117"/>
