--- a/WpfApplication3/View/Pages/Page_主内容.xaml
+++ b/WpfApplication3/View/Pages/Page_主内容.xaml
@@ -41,12 +41,12 @@
         <ComboBox FocusVisualStyle="{x:Null}" x:Name="ComboBox_Month" HorizontalAlignment="Left" Margin="135,43,0,0" VerticalAlignment="Top" Width="60" IsReadOnly="True"  ToolTip="月份" SelectionChanged="ComboBox_Month_SelectionChanged" FontFamily="Microsoft YaHei"   />
 
         <!--TextBox-->
-        <TextBox FocusVisualStyle="{x:Null}" x:Name="TextBox_承上月结余" HorizontalAlignment="Right" Margin="0,43,100,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120"  IsReadOnly="True" Height="20" OpacityMask="Black" FontFamily="Microsoft YaHei" />
+        <TextBox FocusVisualStyle="{x:Null}" x:Name="TextBox_承上月结余" HorizontalAlignment="Right" Margin="0,43,100,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120"  IsReadOnly="True" Height="22" OpacityMask="Black" FontFamily="Microsoft YaHei" />
 
         <!--TextBlock-->
         <TextBlock HorizontalAlignment="Center" Margin="0,10,50,0" TextWrapping="Wrap" Text="银行日记账" VerticalAlignment="Top" FontSize="26" FontWeight="Bold" OpacityMask="Black" FontFamily="Microsoft YaHei" />
-        <TextBlock HorizontalAlignment="Left" Margin="10,45,0,0" TextWrapping="Wrap" Text="日期:" VerticalAlignment="Top" Height="20" FontFamily="Microsoft YaHei"   />
-        <TextBlock FocusVisualStyle="{x:Null}" HorizontalAlignment="Right" Margin="0,45,231,0" TextWrapping="Wrap" Text="承上月结余:" VerticalAlignment="Top"  RenderTransformOrigin="1.37,0.44" Height="20" OpacityMask="Black" FontFamily="Microsoft YaHei"  />
+        <TextBlock HorizontalAlignment="Left" Margin="10,45,0,0" TextWrapping="Wrap" Text="日期:" VerticalAlignment="Top" Height="20" FontFamily="Microsoft YaHei" FontSize="14"   />
+        <TextBlock FocusVisualStyle="{x:Null}" HorizontalAlignment="Right" Margin="0,45,231,0" TextWrapping="Wrap" Text="承上月结余:" VerticalAlignment="Top"  RenderTransformOrigin="1.37,0.44" Height="20" OpacityMask="Black" FontFamily="Microsoft YaHei" FontSize="14"  />
         <Grid HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10,0,0,10">
             <Grid Height="1" Margin="0,0,10,30" VerticalAlignment="Bottom" Background="#FF747474" IsEnabled="False"/>
             <TextBlock HorizontalAlignment="Left" Margin="0,0,0,5" TextWrapping="Wrap" Text="借方发生额累计(年)：" VerticalAlignment="Bottom" FontFamily="Microsoft YaHei"   />
