--- a/WpfApplication3/View/Pages/Page_主内容.xaml
+++ b/WpfApplication3/View/Pages/Page_主内容.xaml
@@ -8,7 +8,7 @@
 	Title="Page_主内容">
 
     <Grid>
-        <Button FocusVisualStyle="{x:Null}" x:Name="Button_刷新结余" Content="刷新结余" HorizontalAlignment="Right" Margin="0,200,10,0" VerticalAlignment="Top" Width="75" Height="25" Foreground="White" Template="{DynamicResource ButtonControlTemplate_通用按钮}" Click="Button_刷新结余_Click" FontFamily="Microsoft YaHei"/>
+        <Button FocusVisualStyle="{x:Null}" x:Name="Button_刷新结余" Content="刷新结余" HorizontalAlignment="Right" Margin="0,200,10,0" VerticalAlignment="Top" Width="75" Height="25" Foreground="White" Template="{DynamicResource ButtonControlTemplate_通用按钮}" Click="Button_刷新结余_Click" FontFamily="Microsoft YaHei" Focusable="False"/>
 
         <GroupBox x:Name="GroupBox_通知" Header="通知" HorizontalAlignment="Right" VerticalAlignment="Bottom" Height="55" Width="280" Margin="0,0,100,10" FontFamily="Microsoft YaHei">
             <TextBlock x:Name="TextBlock_通知信息" Margin="10,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="14" FontFamily="Microsoft YaHei"><Run Language="zh-cn" Text="成功添加6条记录。"/></TextBlock>
