背景强制白色

--- a/WpfApplication3/View/Pages/Page_SignIn.xaml
+++ b/WpfApplication3/View/Pages/Page_SignIn.xaml
@@ -7,7 +7,7 @@
       d:DesignHeight="600" d:DesignWidth="1000"
 	Title="Page_SignIn">
 
-    <Grid Margin="0">
+    <Grid Margin="0" Background="White">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
