--- a/WpfApplication3/View/Pages/Page_主内容.xaml
+++ b/WpfApplication3/View/Pages/Page_主内容.xaml
@@ -7,7 +7,7 @@
       d:DesignHeight="496 " d:DesignWidth="1000"
 	Title="Page_主内容">
 
-    <Grid>
+    <Grid Background="White">
         <Button FocusVisualStyle="{x:Null}" x:Name="Button_刷新结余" Content="刷新结余" HorizontalAlignment="Right" Margin="0,200,10,0" VerticalAlignment="Top" Width="75" Height="25" Foreground="White" Template="{DynamicResource ButtonControlTemplate_通用按钮}" Click="Button_刷新结余_Click" FontFamily="Microsoft YaHei" Focusable="False"/>
 
         <GroupBox x:Name="GroupBox_通知" Header="通知" HorizontalAlignment="Right" VerticalAlignment="Bottom" Height="55" Width="280" Margin="0,0,100,10" FontFamily="Microsoft YaHei">
@@ -47,7 +47,7 @@
         <TextBlock HorizontalAlignment="Center" Margin="0,10,50,0" TextWrapping="Wrap" Text="银行日记账" VerticalAlignment="Top" FontSize="26" FontWeight="Bold" OpacityMask="Black" FontFamily="Microsoft YaHei" />
         <TextBlock HorizontalAlignment="Left" Margin="10,45,0,0" TextWrapping="Wrap" Text="日期:" VerticalAlignment="Top" Height="20" FontFamily="Microsoft YaHei" FontSize="14"   />
         <TextBlock FocusVisualStyle="{x:Null}" HorizontalAlignment="Right" Margin="0,45,231,0" TextWrapping="Wrap" Text="承上月结余:" VerticalAlignment="Top"  RenderTransformOrigin="1.37,0.44" Height="20" OpacityMask="Black" FontFamily="Microsoft YaHei" FontSize="14"  />
-        <Grid HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10,0,0,10">
+        <Grid HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10,0,0,10" Background="White">
             <Grid Height="1" Margin="0,0,10,30" VerticalAlignment="Bottom" Background="#FF747474" IsEnabled="False"/>
             <TextBlock HorizontalAlignment="Left" Margin="0,0,0,5" TextWrapping="Wrap" Text="借方发生额累计(年)：" VerticalAlignment="Bottom" FontFamily="Microsoft YaHei"   />
             <TextBlock HorizontalAlignment="Left" Margin="306,0,0,5" TextWrapping="Wrap" Text="贷方发生额累计(年)：" VerticalAlignment="Bottom" FontFamily="Microsoft YaHei"   />
