--- a/WpfApplication3/NewWindow.xaml
+++ b/WpfApplication3/NewWindow.xaml
@@ -8,7 +8,7 @@
             <ColumnDefinition Width="137*"/>
         </Grid.ColumnDefinitions>
         <Label x:Name="Label_Title" Content="金字塔财务管理工具" HorizontalAlignment="Left" Margin="0,5,0,0" VerticalAlignment="Top" Foreground="White" FontSize="14" Grid.Column="1"/>
-        <Image HorizontalAlignment="Center" Height="28" Margin="419,5,5,0" VerticalAlignment="Top" Source="View/Image/Pyramid_Logo_128x128.ico" Width="28">
+        <Image HorizontalAlignment="Right" Height="28" Margin="0,5,5,0" VerticalAlignment="Top" Source="View/Image/Pyramid_Logo_128x128.ico" Width="28">
             <Image.Effect>
                 <DropShadowEffect Color="White" BlurRadius="2" ShadowDepth="0"/>
             </Image.Effect>
