--- a/WpfApplication3/App.xaml
+++ b/WpfApplication3/App.xaml
@@ -1,7 +1,8 @@
 ﻿<Application x:Class="Wpf.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="NewWindow.xaml">
+             StartupUri="NewWindow.xaml"
+             DispatcherUnhandledException="App_DispatcherUnhandledException" >
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
